[package]
name = "source-text"
description = "Process &str from either a file or in-memory string w/ the source in help context."
repository = "https://github.com/nathan-at-least/source-text.git"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.62"

[dev-dependencies]
indoc = "1.0.7"
